tests/compile-fail/interned_custom_id_not_send.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> tests/compile-fail/interned_custom_id_not_send.rs:36:19
   |
36 |     assert_send::<Interned>();
   |                   ^^^^^^^^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `Interned`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `LocalId`
  --> tests/compile-fail/interned_custom_id_not_send.rs:7:8
   |
 7 | struct LocalId {
   |        ^^^^^^^
note: required because it appears within the type `Interned`
  --> tests/compile-fail/interned_custom_id_not_send.rs:28:8
   |
28 | struct Interned {
   |        ^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compile-fail/interned_custom_id_not_send.rs:32:19
   |
32 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<()>` cannot be shared between threads safely
  --> tests/compile-fail/interned_custom_id_not_send.rs:37:19
   |
37 |     assert_sync::<Interned>();
   |                   ^^^^^^^^ `Rc<()>` cannot be shared between threads safely
   |
   = help: within `Interned`, the trait `Sync` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `LocalId`
  --> tests/compile-fail/interned_custom_id_not_send.rs:7:8
   |
 7 | struct LocalId {
   |        ^^^^^^^
note: required because it appears within the type `Interned`
  --> tests/compile-fail/interned_custom_id_not_send.rs:28:8
   |
28 | struct Interned {
   |        ^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compile-fail/interned_custom_id_not_send.rs:33:19
   |
33 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`
